--- a/index.html
+++ b/index.html
@@ -571,6 +571,25 @@
             </li>
           </ul>
         </div>
+        <form class="form">
+          <p class="mail-text">Subscribe</p>
+          <label for="email" class="mail-label"></label>
+          <div class="input-row">
+            <input
+              class="input-email"
+              type="email"
+              name="email"
+              id="email"
+              placeholder="E-mail"
+            />
+            <button class="mail-button" type="submit">
+              Subscribe
+              <svg width="24" height="24" class="icon-scr">
+                <use href="./images/icons.svg#icon-subscr"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
