--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
       <section class="main-hero">
         <div class="container main-hero-container">
           <h1 class="main-hero-text">Effective Solutions for Your Business</h1>
-          <button class="main-hero-button" type="button">Order Service</button>
+          <button class="main-hero-button" type="button" data-modal-open>
+            Order Service
+          </button>
         </div>
       </section>
       <!--#endsection hero-->
@@ -121,11 +123,9 @@
           </ul>
         </div>
       </section>
-
       <!--#endsection features-->
 
       <!--#section team-->
-
       <section class="team">
         <div class="container team-container">
           <h2 class="team-text">Our Team</h2>
@@ -369,11 +369,9 @@
           </ul>
         </div>
       </section>
-
       <!--#endsection team-->
 
       <!--#section portfolio-->
-
       <section class="portfolio">
         <div class="container">
           <h2 class="portfolio-text">Our Portfolio</h2>
@@ -592,5 +590,92 @@
         </form>
       </div>
     </footer>
+    <div class="backdrop" data-modal>
+      <div class="popup-review">
+        <button type="button" class="close-popup" data-modal-close>
+          <svg class="close-btn" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="text-popup">Leave your contacts and we will call you back</p>
+        <form>
+          <div class="field-wrapper">
+            <label class="label-field" for="user-name">Name</label>
+            <div class="icon-inner">
+              <input
+                class="input-field"
+                type="text"
+                id="user-name"
+                name="user-name"
+                required
+              />
+              <svg width="18" height="24" class="icon-wrapper">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="field-wrapper">
+            <label class="label-field" for="user-phone">Phone</label>
+            <div class="icon-inner">
+              <input
+                class="input-field"
+                type="tel"
+                id="user-phone"
+                name="user-phone"
+                required
+              />
+              <svg width="18" height="24" class="icon-wrapper">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="field-wrapper">
+            <label class="label-field" for="user-email">Email</label>
+            <div class="icon-inner">
+              <input
+                class="input-field"
+                type="email"
+                id="user-email"
+                name="user-email"
+                required
+              />
+              <svg width="18" height="24" class="icon-wrapper">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="field-wrapper">
+            <label class="label-field" for="user-comment">Comment</label>
+            <textarea
+              class="comment-field"
+              name="usr-comment"
+              id="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="checkbox-wrapper">
+            <input
+              type="checkbox"
+              id="user-terms"
+              name="user-terms"
+              value="true"
+              required
+              class="input-checkbox visually-hidden"
+            />
+            <label for="user-terms" class="text-terms">
+              <span class="custom-checkbox">
+                <svg height="8" width="10" class="check-icon">
+                  <use href="./images/icons.svg#icon-click"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="#" class="privacy-link">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="botton-field" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
